[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imgpipe"
version = "0.1.0"
description = "Declarative, config-driven image processing pipeline CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
imgpipe = "imgpipe.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/imgpipe"]

[tool.hatch.build.targets.sdist]
include = ["src/imgpipe", "README.md", "LICENSE", "pyproject.toml"]
